Avoid dock close button to overlap title

--- a/mapBuilder/www/css/main.css
+++ b/mapBuilder/www/css/main.css
@@ -114,6 +114,7 @@ span.fancytree-drag-source.fancytree-drag-remove {
     padding-bottom: 10px;
     padding-left: 10px;
     margin-bottom: 5px;
+    padding-right: 75px;
 }
 
 #dock-close{
